-
Bug
-
Resolution: Fixed
-
P3
-
7
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2229323 | 8 | Leonid Romanov | P3 | Resolved | Fixed | b63 |
| JDK-8019040 | 7u45 | Leonid Romanov | P3 | Closed | Fixed | b01 |
| JDK-8000307 | 7u10 | Leonid Romanov | P3 | Closed | Fixed | b12 |
SHORT SUMMARY:
The problem is, when we alt+tab back to the new form, the focus does exist on
the default element, which is the first tf, but if we click on a different tf
in the same form, the text in that tf is not highlighted, though the cursor
moves to that tf. They claim this to be a side effect of the fact that forms
has missed receiving a FOCUS GAINED event whenever the issue reproduces.
INDICATORS: 7u6
COUNTER INDICATORS: JDK 6
TRIGGERS: EBS/Forms App (ver?)
KNOWN WORKAROUND: Unclear
PRESENT SINCE: JDK 7 GA
HOW TO VERIFY: Forms Test case within bugdb
NOTES FOR SE: Not avail.
REGRESSION: TBD
The problem is, when we alt+tab back to the new form, the focus does exist on
the default element, which is the first tf, but if we click on a different tf
in the same form, the text in that tf is not highlighted, though the cursor
moves to that tf. They claim this to be a side effect of the fact that forms
has missed receiving a FOCUS GAINED event whenever the issue reproduces.
INDICATORS: 7u6
COUNTER INDICATORS: JDK 6
TRIGGERS: EBS/Forms App (ver?)
KNOWN WORKAROUND: Unclear
PRESENT SINCE: JDK 7 GA
HOW TO VERIFY: Forms Test case within bugdb
NOTES FOR SE: Not avail.
REGRESSION: TBD
- backported by
-
JDK-2229323 Jre7cert: focusgained does not get called for all focus req when do alt + tab
-
- Resolved
-
-
JDK-8000307 Jre7cert: focusgained does not get called for all focus req when do alt + tab
-
- Closed
-
-
JDK-8019040 Jre7cert: focusgained does not get called for all focus req when do alt + tab
-
- Closed
-
- relates to
-
JDK-8002362 Build fails after integration of 7185280 to jdk7u-dev
-
- Closed
-