7185280: Jre7cert: focusgained does not get called for all focus req when do alt + tab Reviewed-by: art, ant